--- a/WebApplication1/WebApplication1/packages.config
+++ b/WebApplication1/WebApplication1/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
   <package id="bootstrap" version="3.4.1" targetFramework="net48" />
+  <package id="BouncyCastle" version="1.8.3.1" targetFramework="net48" />
+  <package id="Google.Protobuf" version="3.6.1" targetFramework="net48" />
   <package id="jQuery" version="3.3.1" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net48" />
@@ -12,6 +14,8 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
+  <package id="MySql.Data" version="8.0.18" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net48" />
+  <package id="SSH.NET" version="2016.1.0" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
